@@ -1,3 +1,4 @@
+* [Bug 1148] NMEA reference clock improvements
 * Documentation updates from Dave Mills.
 (4.2.5p160) 2009/03/30 Released by Harlan Stenn <stenn@ntp.org>
 * Include (4.2.4p7)
